all changes needed to html

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
             <address>
                 <a href="mailto:djsamif@gmail.com">Email</a>
                 <a href="https://github.com/SamiF812">Github</a>
-                <a href="https://www.linkedin.com/in/sami-f-9ba033234/">Linkedin</a>
-
-                
+                <a href="https://www.linkedin.com/in/sami-f81291/">linkedin</a>
+                <a href="./Assets/documents/Sami Fares_Resume.pdf"Download>Download Resume</a>
                 <p>Number: 201-468-2130</p>
             </address>
         </div>
